[gd_scene load_steps=4 format=3 uid="uid://cnrc57uvl7y3e"]

[ext_resource type="Script" uid="uid://bs62758osklx5" path="res://scripts/cama.gd" id="1_vnf4b"]
[ext_resource type="Texture2D" uid="uid://jv3vnln3slee" path="res://imagenes/8819420.png" id="2_5awob"]

[sub_resource type="CircleShape2D" id="CircleShape2D_480ko"]
radius = 39.012817

[node name="Cama" type="Area2D"]
script = ExtResource("1_vnf4b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_480ko")

[node name="Exclamacion" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3.8146973e-06, -81)
scale = Vector2(0.16015625, 0.16015625)
texture = ExtResource("2_5awob")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
